fixed spacing on case studies

--- a/src/modules/FeaturedCaseStudies.scss
+++ b/src/modules/FeaturedCaseStudies.scss
@@ -5,7 +5,7 @@
   width: 100%;
   text-align: center;
   .case-wrapper {
-    padding: 5px 60px;
+    padding: 5px 0;
 
     .case-studies {
       display: flex;
@@ -18,21 +18,30 @@
       .case-item {
         max-width: 313px;
         width: 100%;
-        padding: 20px;
+        margin: 20px;
 
         .case-item-inner {
           border-radius: $border-radius;
           box-shadow: 0 2px 27px 0 rgba(0, 0, 0, 0.05);
           background-color: #ffffff;
           text-align: center;
-          height: 100%;
+		  height: 100%;
+		  &:hover {
+			box-shadow: 0 2px 27px 0 rgba(0, 0, 0, 0.15);
+		  }
+		  &:active {
+			box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
+		  }
 
           .image {
             border-top-left-radius: $border-radius;
             border-top-right-radius: $border-radius;
 
             height: 190px;
-            overflow: hidden;
+			overflow: hidden;
+			img {
+				width:100%;
+			}
           }
 
           .customer-logo {
